--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,3 +1,21 @@
+@font-face {
+    font-family: "Nunito Sans";
+    src: url('../assets/fonts/nunito-sans-v15-latin-regular.woff2'),
+    url('../assets/fonts/nunito-sans-v15-latin-500.woff2'),
+    url('../assets/fonts/nunito-sans-v15-latin-600.woff2'),
+    url('../assets/fonts/nunito-sans-v15-latin-600italic.woff2')
+    url('../assets/fonts/nunito-sans-v15-latin-900.woff2'),
+    url('../assets/fonts/nunito-sans-v15-latin-900italic.woff2');
+}
+
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+    font-family: 'Nunito Sans', sans-serif;
+}
+
 body {
     margin: 0;
+    color: var(--primary-color);
 }
