--- a/src/scss/layout/_about-section.scss
+++ b/src/scss/layout/_about-section.scss
@@ -1,30 +1,52 @@
 .about-section {
-
-    padding: 48px 0;
+    padding: 60px 0;
 
     &__title {
         text-transform: uppercase;
-        font-size: 24px;
+        font-size: 36px;
+        font-weight: 900;
+        font-style: italic;
+        margin: 0;
+        line-height: 50px;
     }
 
     &__text{
+        font-size: 26px;
+        line-height: 34px;
+        font-weight: 500;
+        margin-bottom: 60px;
+        
         
         span {
-            font-weight: 700;
-            font-size: 24px;
+            font-weight: 900;
+            font-style: italic;
+            line-height: 34px;
+            font-size: 26px;
             text-transform: uppercase;
         }
     }
 
     &__button {
-        display: flex;
-        align-items: center;
         background-color: transparent;
         border: none;
         a {
+            display: flex;
             text-decoration: none;
-            color: blue;
+            color: var(--color-button);
+            font-size: 24px;
+            gap: 8px;
+            font-weight: 600;
+            align-items: center;
+            padding: 12px 10px;
+            line-height: 32px;
 
+            &:hover {
+                text-shadow: 0px 4px 10px 0px rgba(3, 14, 67, 0.60)
+            }
+
+            svg {
+                fill: var(--color-button);
+            }
         }
     }
 
