--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -13,8 +13,8 @@
     &__logo {
         
         img {
-            width: 50px;
-            height: 50px;
+            width: 52px;
+            height: 60px;
         }
     }
 
@@ -22,20 +22,36 @@
         display: flex;
         padding: 0;
         list-style-type: none;
-        gap: 40px;
+        gap: 36px;
 
         a {
             text-decoration: none;
+            font-size: 26px;
+            font-weight: 400;
+            padding: 10px 12px;
             color: white;
+
+            &:hover {
+                text-shadow: 0px 2px 20px #FFF
+            }
         }
     }
 
     &__button {
-        padding: 10px 20px;
-        background-color: blue;
+        background-color: var(--color-button);
+        width: 123px;
         color: white;
         border: none;
-        border-radius: 8px;
+        padding: 12px 10px;
         cursor: pointer;
+
+        &:hover {
+            background: var(--primary-color);
+            box-shadow: 0px 4px 10px 0px rgba(3, 14, 67, 0.60);
+        }
+
+        &:active {
+            box-shadow: 0px 4px 20px 0px rgba(233, 204, 170, 0.60);
+        }
     }
 }
