--- a/src/scss/layout/_hero-section.scss
+++ b/src/scss/layout/_hero-section.scss
@@ -13,23 +13,25 @@
 
     &__title {
             display: flex;
-            font-size: 3rem;
+            font-style: italic;
+            font-size: 50px;
+            font-weight: 900;
             font-weight: bold;
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
             z-index: 10;
             text-transform: uppercase;
-            max-width: 70%;
             text-align: start;
             width: 100%;
     }
 
     &__text {
         display: flex;
+        font-style: italic;
         width: 100%;
-        max-width: 70%;
         z-index: 10;
         text-align: start;
-        font-size: 24px;
+        font-size: 30px;
+        font-weight: 600;
     }
 
 }
