--- a/src/scss/layout/_hero-section.scss
+++ b/src/scss/layout/_hero-section.scss
@@ -14,6 +14,7 @@
     &__title {
             display: flex;
             font-style: italic;
+            font-family: 'Nunito Sans', sans-serif;
             font-size: 50px;
             font-weight: 900;
             font-weight: bold;
