--- a/src/scss/layout/_key-section.scss
+++ b/src/scss/layout/_key-section.scss
@@ -1,8 +1,8 @@
 .key-section {
     padding: 100px 0;
     background-position: center;
-    background: linear-gradient(0deg, rgba(12, 17, 41, 0.60) 0%, rgba(12, 17, 41, 0.60) 100%), url('/src/assets/key-bg.jpg') lightgray 50% / cover no-repeat;
-
+    background: linear-gradient(0deg, rgba(12, 17, 41, 0.60) 0%, rgba(12, 17, 41, 0.60) 100%), 
+                url('/src/assets/key-bg.jpg') lightgray 50% / cover no-repeat;
 
     &__container {
         display: flex;
@@ -33,7 +33,6 @@
         background: white;
         width: 50%;
         background-color: transparent;
-        // max-width: 442px;
     }
 
     &__info-button {
@@ -47,30 +46,45 @@
         color: var(--primary-color);
         text-decoration: none;
         text-transform: uppercase;
+        background-color: #fff;
         font-size: 22px;
         font-weight: 500;
         font-style: italic;
         text-align: start;
         gap: 10px;
 
-        &:nth-child(1) {
-            border-bottom: 1px solid #B6B6B6;
-        }
-
-        &:nth-child(2) {
-            border-bottom: 1px solid #B6B6B6;
-        }
-
+        &:nth-child(1),
+        &:nth-child(2),
         &:nth-child(3) {
             border-bottom: 1px solid #B6B6B6;
         }
 
-            svg {
-                fill: var(--primary-color);
-                width: 24px;
-                height: 24px;
-                rotate: 90deg;
-                flex-shrink: 0;
-            }
+        svg {
+            fill: var(--primary-color);
+            width: 24px;
+            height: 24px;
+            flex-shrink: 0;
+            transition: transform 0.3s ease;
+        }
+
+        .key-section__arrow--open {
+            transform: rotate(180deg);
+        }
+    }
+
+    // Стили для выпадающего блока (контента аккордеона)
+    &__dropdown {
+        background: #fff;
+        padding: 0 30px;
+        font-size: 18px;
+        font-weight: 400;
+        font-style: italic;
+        color: var(--color-button);
+        line-height: 1.5;
+        overflow: hidden;
+
+        p {
+            margin: 15px 0;
+        }
     }
 }
