--- a/src/scss/layout/_key-section.scss
+++ b/src/scss/layout/_key-section.scss
@@ -53,10 +53,8 @@
         text-align: start;
         gap: 10px;
 
-        &:nth-child(1),
-        &:nth-child(2),
-        &:nth-child(3) {
-            border-bottom: 1px solid #B6B6B6;
+        &:nth-child(1) {
+            border-top: 1px solid #B6B6B6;
         }
 
         svg {
