--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,5 +5,6 @@
 @import './layout/header';
 @import './layout/hero-section';
 @import './layout/key-section';
+@import './layout/initiators-section';
 @import './layout/contact-section';
 @import './utils/utils';
