--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,5 +6,6 @@
 @import './layout/hero-section';
 @import './layout/key-section';
 @import './layout/initiators-section';
+@import './layout/commutication-section';
 @import './layout/contact-section';
 @import './utils/utils';
