--- a/src/scss/layout/_initiators-section.scss
+++ b/src/scss/layout/_initiators-section.scss
@@ -30,7 +30,6 @@
     }
 
     &__text-link {
-        text-decoration: none;
         color: var(--primary-color);
         font-weight: 700;
     }
@@ -43,6 +42,16 @@
         cursor: pointer;
         border: none;
         padding: 10px 71px;
+
+        &:hover {
+            background: var(--Blue-dark, #030E43);
+            box-shadow: 0px 4px 10px 0px rgba(3, 14, 67, 0.60);
+        }
+
+        &:active {
+            background: var(--Blue-dark, #030E43);
+            box-shadow: 0px 4px 20px 0px rgba(233, 204, 170, 0.60);
+        }
 
         a {
             display: flex;
