--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,4 +8,5 @@
 @import './layout/initiators-section';
 @import './layout/commutication-section';
 @import './layout/contact-section';
+@import './layout/partners-section';
 @import './utils/utils';
