--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -44,6 +44,8 @@
         border: none;
         padding: 12px 10px;
         cursor: pointer;
+        text-decoration: none;
+        text-align: center;
 
         &:hover {
             background: var(--primary-color);
