--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 @import './layout/header';
 @import './layout/hero-section';
 @import './layout/key-section';
+@import './layout/footer';
 @import './layout/initiators-section';
 @import './layout/commutication-section';
 @import './layout/contact-section';
