--- a/src/scss/componets/_container.scss
+++ b/src/scss/componets/_container.scss
@@ -2,5 +2,13 @@
     width: 100%;
     max-width: 100%;
     margin: 0 auto;
-    padding: 0 184px;
+    padding: 0 32px;
+
+    @media screen and (min-width: $bp-mobile) {
+        padding: 0 80px;
+    }
+
+    @media screen and (min-width: $bp-tablet) {
+        padding: 0 184px;
+    }
 }
