--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,7 +1,13 @@
 .header {
     width: 100%;
-    position: absolute;
-    z-index: 2;
+    background-color: var(--primary-color);
+
+
+    @media screen and (min-width: $bp-mobile) {
+        background-color: transparent;
+        position: absolute;
+        z-index: 2;
+    }
 
     &__nav {
         display: flex;
@@ -11,6 +17,11 @@
     }
 
     &__logo {
+        display: none;
+
+        @media screen and (min-width: $bp-mobile) {
+            display: block;
+        }
         
         img {
             width: 52px;
@@ -18,18 +29,48 @@
         }
     }
 
+    &__mobile-logo {
+        display: block;
+
+        @media screen and (min-width: $bp-mobile) {
+            display: none;
+        }
+
+        img {
+            width: 80px;
+            height: 38px;
+        }
+    }
+
     &__menu {
-        display: flex;
-        padding: 0;
-        list-style-type: none;
-        gap: 36px;
+        display: none;
+
+        @media screen and (min-width: $bp-tablet) {
+            display: flex;
+            padding: 0;
+            list-style-type: none;
+            gap: 18px;
+        }
+
+        @media screen and (min-width:$bp-desktop) {
+            gap: 36px;
+        }
 
         a {
-            text-decoration: none;
-            font-size: 26px;
-            font-weight: 400;
-            padding: 10px 12px;
-            color: white;
+            display: none;
+
+            @media screen and (min-width: $bp-tablet) {
+                display: flex;
+                text-decoration: none;
+                font-size: 20px;
+                font-weight: 400;
+                padding: 10px 12px;
+                color: white;
+            }
+
+            @media screen and (min-width: $bp-desktop) {
+                font-size: 26px;
+            }
 
             &:hover {
                 text-shadow: 0px 2px 20px #FFF
@@ -38,14 +79,22 @@
     }
 
     &__button {
-        background-color: var(--color-button);
-        width: 123px;
-        color: white;
-        border: none;
-        padding: 12px 10px;
-        cursor: pointer;
-        text-decoration: none;
-        text-align: center;
+        display: none;
+
+        @media screen and (min-width: $bp-tablet) {
+            display: block;
+            background-color: var(--color-button);
+            width: 123px;
+            color: white;
+            border: none;
+            padding: 12px 10px;
+            cursor: pointer;
+            text-decoration: none;
+            text-align: center;
+            font-size: 16px;
+            text-wrap: nowrap;
+        }
+
 
         &:hover {
             background: var(--primary-color);
@@ -54,6 +103,16 @@
 
         &:active {
             box-shadow: 0px 4px 20px 0px rgba(233, 204, 170, 0.60);
+        }
+    }
+
+    &__burger-btn {
+        display: block;
+        background-color: transparent;
+        border: none;
+
+        @media screen and (min-width: $bp-tablet){
+            display: none;
         }
     }
 }
