--- a/src/scss/layout/_initiators-section.scss
+++ b/src/scss/layout/_initiators-section.scss
@@ -1,31 +1,94 @@
 .initiators-section {
-    padding: 60px 0 40px;
+    padding: 24px 0 16px;
+
+    @media screen and (min-width:$bp-tablet) {
+        padding: 60px 0 40px;
+    }
 
     &__container {
-        display: flex;
-        justify-content: space-between;
+        display: block;
+
+        @media screen and (min-width:$bp-desktop) {
+            display: flex;
+            justify-content: space-between;
+        }
     }
 
     &__title {
         font-size: 24px;
         font-weight: 900;
         line-height: 32px;
-        margin-bottom: 40px;
+        margin-bottom: 16px;
         text-transform: uppercase;
+
+        @media screen and (min-width:$bp-mobile) {
+            margin-bottom: 24px;
+        }
+
+        @media screen and (min-width:$bp-tablet) {
+            margin-bottom: 40px;
+        }
     }
 
     &__img {
-        max-height: 434px;
+        display: none;
+
+        @media screen and (min-width: $bp-desktop) {
+            display: block;
+            max-height: 434px;
+        }
     }
 
+    &__img-tablet {
+        display: none;
+
+        @media screen and (min-width: $bp-mobile) {
+            display: block;
+            width: 100%;
+        }
+
+        @media screen and (min-width: $bp-desktop) {
+            display: none;
+        }
+    }
+
+    &__img-mobile {
+        width: 100%;
+
+        @media screen and (min-width:$bp-mobile) {
+            display: none;
+        }
+    }
+
+
+
     &__text {
-        max-width: 594px;
-        font-size: 24px;
+        width: 100%;
+        font-size: 14px;
         font-weight: 400;
-        line-height: 32px;
+        line-height: 18px;
+
+        @media screen and (min-width:$bp-mobile) {
+            font-size: 20px;
+            line-height: 24px;
+        }
+
+        @media screen and (min-width:$bp-desktop) {
+            max-width: 594px;
+            font-size: 24px;
+            line-height: 32px;
+        }
 
         p {
-            margin: 0 0 30px;
+            margin: 0 0 16px;
+
+            @media screen and (min-width:$bp-mobile) {
+                margin: 24px 0;
+            }
+
+            @media screen and (min-width:$bp-desktop) {
+                margin: 0 0 30px;
+            }
         }
     }
 
@@ -42,6 +105,11 @@
         cursor: pointer;
         border: none;
         padding: 10px 71px;
+        margin-top: 16px;
+
+        @media screen and (min-width:$bp-mobile) {
+            margin:0
+        }
 
         &:hover {
             background: var(--Blue-dark, #030E43);
@@ -52,19 +120,41 @@
             background: var(--Blue-dark, #030E43);
             box-shadow: 0px 4px 20px 0px rgba(233, 204, 170, 0.60);
         }
+    }
 
-        a {
+    &__link {
+        display: none;
+
+            @media screen and (min-width:$bp-tablet) {
+                display: flex;
+                align-items: center;
+                text-decoration: none;
+                color: #fff;
+                font-size: 24px;
+                font-weight: 600;
+                gap: 8px;
+
+                svg {
+                    fill: #fff;
+                }
+            }
+    }
+
+    &__link-mobile {
             display: flex;
             align-items: center;
             text-decoration: none;
             color: #fff;
-            font-size: 24px;
+            font-size: 16px;
             font-weight: 600;
             gap: 8px;
+
+            @media screen and (min-width:$bp-tablet) {
+                display: none;
+            }
 
             svg {
                 fill: #fff;
             }
-        }
     }
 }
