--- a/src/scss/layout/_commutication-section.scss
+++ b/src/scss/layout/_commutication-section.scss
@@ -1,41 +1,97 @@
 .communication-section {
-    padding: 40px 0;
+    padding: 24px 0;
+
+    @media screen and (min-width:$bp-tablet) {
+        padding: 40px 0;
+    }
 
     &__container {
-        display: flex;
-        justify-content: space-between;
+        display: block;
+
+        @media screen and (min-width:$bp-mobile) {
+            display: flex;
+            justify-content: space-between;
+        }
     }
 
     &__title {
-        font-size: 36px;
+        font-size: 24px;
         font-weight: 900;
         font-style: italic;
-        line-height: 50px;
+        line-height: 32px;
         text-transform: uppercase;
+        margin-top: 0;
+
+
+        @media screen and (min-width:$bp-desktop) {
+            font-size: 36px;
+            line-height: 50px;
+        }
     }
 
     &__contact-info {
         h3 {
-            font-size: 36px;
+            font-size: 16px;
             font-weight: 700;
             margin-top: 0;
+
+
+            @media screen and (min-width:$bp-mobile) {
+                font-size: 22px;
+            }
+
+            @media screen and (min-width:$bp-desktop) {
+                font-size: 36px;
+            }
         }
 
         address {
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            gap: 10px;
+            margin-bottom: 24px;
+
+            @media screen and (min-width:$bp-mobile) {
+                gap: 20px;
+                margin: 0;
+            }
 
             a {
                 display: flex;
                 align-items: center;
-                gap: 10px;
+                gap: 8px;
                 text-decoration: none;
                 color: var(--primary-color);
-                font-size: 26px;
+                font-size: 14px;
                 font-weight: 500;
                 font-style: normal;
+
+                @media screen and (min-width:$bp-mobile) {
+                    font-size: 20px;
+                }
+
+                @media screen and (min-width:$bp-desktop) {
+                    font-size: 26px;
+                }
+
+                svg {
+                    width: 20px;
+                    height: 20px;
+                    @media screen and (min-width:$bp-mobile) {
+                        width: 26;
+                        height: 26;
+                    }
+                }
             }
+        }
+    }
+
+    &__map {
+        width: 100%;
+        height: 254px;
+
+        @media screen and (min-width:$bp-mobile) {
+            width: 424px;
         }
     }
 }
