--- a/src/scss/layout/_commutication-section.scss
+++ b/src/scss/layout/_commutication-section.scss
@@ -8,7 +8,7 @@
     &__container {
         display: block;
 
-        @media screen and (min-width:$bp-mobile) {
+        @media screen and (min-width:$bp-desktop) {
             display: flex;
             justify-content: space-between;
         }
@@ -51,7 +51,7 @@
             gap: 10px;
             margin-bottom: 24px;
 
-            @media screen and (min-width:$bp-mobile) {
+            @media screen and (min-width:$bp-desktop) {
                 gap: 20px;
                 margin: 0;
             }
@@ -87,10 +87,11 @@
     }
 
     &__map {
-        width: 100%;
-        height: 254px;
+        max-width: 100%;
+        max-height: 100%;
+        border: none;
 
-        @media screen and (min-width:$bp-mobile) {
+        @media screen and (min-width:$bp-desktop) {
             width: 424px;
         }
     }
