--- a/src/scss/layout/_contact-section.scss
+++ b/src/scss/layout/_contact-section.scss
@@ -1,23 +1,43 @@
 .contact-section {
-    padding: 80px 0;
+    padding: 16px 0;
+
+    @media screen and (min-width: $bp-desktop) {
+        padding: 80px 0;
+    }
 
     &__form-container {
-        display: flex;
-        justify-content: space-between;
+        display: block;
+        
+        @media screen and (min-width: $bp-desktop) {
+            display: flex;
+            justify-content: space-between;
+        }
     }
 
     &__form-title {
         color: var(--primary-color);
-        font-size: 30px;
+        font-size: 16px;
         font-weight: 900;
         font-style: italic;
         text-transform: uppercase;
+
+        @media screen and (min-width: $bp-mobile) {
+            font-size: 24px;
+        }
+
+        @media screen and (min-width: $bp-desktop) {
+            font-size: 30px;
+        }
     }
 
     &__form-block {
         display: flex;
         flex-direction: column;
-        width: 45%;
+        width: 100%;
+
+        @media screen and (min-width:$bp-desktop) {
+            width: 45%;
+        }
     }
 
     &__button {
