--- a/src/scss/layout/_commutication-section.scss
+++ b/src/scss/layout/_commutication-section.scss
@@ -87,8 +87,8 @@
     }
 
     &__map {
-        max-width: 100%;
-        max-height: 100%;
+        width: 100%;
+        height: 254px;
         border: none;
 
         @media screen and (min-width:$bp-desktop) {
