--- a/src/scss/layout/_contact-section.scss
+++ b/src/scss/layout/_contact-section.scss
@@ -1,6 +1,10 @@
 .contact-section {
     padding: 16px 0;
 
+    @media screen and (min-width:$bp-mobile) {
+        padding: 32px;
+    }
+
     @media screen and (min-width: $bp-desktop) {
         padding: 80px 0;
     }
@@ -51,8 +55,12 @@
             background: blue;
             border: none;
             cursor: pointer;
-            font-size: 24px;
+            font-size: 16px;
             color: white;
+
+            @media screen and (min-width:$bp-tablet) {
+                font-size: 24px;
+            }
         }
     }
 
@@ -73,15 +81,23 @@
         }
 
         &::placeholder {
-            font-size: 18px;
+            font-size: 14px;
             font-weight: 400;
+
+            @media screen and (min-width:$bp-tablet) {
+                font-size: 18px;
+            }
         }
     }
 
     label {
         font-weight: 700;
-        font-size: 20px;
+        font-size: 16px;
         margin-bottom: 6px;
+
+        @media screen and (min-width:$bp-tablet) {
+            font-size: 20px;
+        }
     }
 
     &__contact-block {
