--- a/src/scss/layout/_about-section.scss
+++ b/src/scss/layout/_about-section.scss
@@ -19,6 +19,7 @@
         line-height: 20px;
         font-weight: 500;
         margin-bottom: 24px;
+        text-align: justify;
 
         @media screen and (min-width: $bp-mobile) {
             font-size: 16px;
