--- a/src/scss/layout/_initiators-section.scss
+++ b/src/scss/layout/_initiators-section.scss
@@ -81,6 +81,7 @@
 
         p {
             margin: 0 0 16px;
+            text-align: justify;
 
             @media screen and (min-width:$bp-mobile) {
                 margin: 24px 0;
@@ -106,6 +107,7 @@
         border: none;
         padding: 10px 71px;
         margin-top: 16px;
+        text-wrap: nowrap;
 
         @media screen and (min-width:$bp-mobile) {
             margin:0
