--- a/src/scss/layout/_key-section.scss
+++ b/src/scss/layout/_key-section.scss
@@ -25,6 +25,7 @@
         font-size: 14px;
         font-weight: 400;
         max-width: 496px;
+        text-align: justify;
 
         @media screen and (min-width:$bp-mobile) {
             font-size: 16px;
@@ -107,7 +108,7 @@
     // Стили для выпадающего блока (контента аккордеона)
     &__dropdown {
         background: #fff;
-        padding: 0 5px;
+        padding: 0 15px;
         font-size: 16px;
         font-weight: 400;
         font-style: italic;
