--- a/src/scss/layout/_initiators-section.scss
+++ b/src/scss/layout/_initiators-section.scss
@@ -11,6 +11,7 @@
         @media screen and (min-width:$bp-desktop) {
             display: flex;
             justify-content: space-between;
+            gap: 70px;
         }
     }
 
@@ -74,7 +75,9 @@
         }
 
         @media screen and (min-width:$bp-desktop) {
-            max-width: 594px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             font-size: 24px;
             line-height: 32px;
         }
