--- a/src/scss/layout/_hero-section.scss
+++ b/src/scss/layout/_hero-section.scss
@@ -34,7 +34,7 @@
 
     @media screen and (min-width: $bp-desktop) {
       font-size: 50px;
-      margin: 0;
+      margin: 370px 0 0;
     }
   }
 
