--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -117,35 +117,35 @@
 
 .burger-menu {
     position: fixed;
-    top: 0;
-    right: -100%;
-    width: 100%; /* Занимает всю ширину экрана */
+    top: -100%; /* Начальная позиция меню за пределами экрана сверху */
+    left: 0;
+    width: 100%;
     height: 30vh;
     background-color: var(--primary-color);
-    transition: right 0.3s ease-in-out;
+    transition: top 0.3s ease-in-out;
     z-index: 200;
     display: flex;
     flex-direction: column;
     padding: 11px 0;
-}
-
-.burger-menu--open {
-    right: 0;
-}
-
-.burger-menu__header {
+  }
+  
+  .burger-menu--open {
+    top: 0; /* При открытии меню плавно спускается вниз */
+  }
+  
+  .burger-menu__header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 32px 11px;
     border-bottom: 1px solid #fff;
-}
-
-.burger-menu__logo {
+  }
+  
+  .burger-menu__logo {
     height: 40px;
-}
-
-.burger-menu__close-btn {
+  }
+  
+  .burger-menu__close-btn {
     background: none;
     border: none;
     cursor: pointer;
@@ -153,31 +153,28 @@
     align-items: center;
     justify-content: center;
     padding: 0.5rem;
-}
-
-.burger-menu__close-btn svg {
+  }
+  
+  .burger-menu__close-btn svg {
     width: 24px;
     height: 24px;
-}
-
-.burger-nav {
+  }
+  
+  .burger-nav {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 18px;
     padding: 0;
-
-    a {
-        text-decoration: none;
-        color: #fff;
-        :nth-child(2),
-        :nth-child(3) {
-            font-size: 16px;
-            font-weight: 400;
-    }
-        }
-}
-
-.hero-link {
+  }
+  
+  .burger-nav a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+  }
+  
+  .hero-link {
     font-weight: 900;
-}
+  }
