--- a/src/scss/layout/_about-section.scss
+++ b/src/scss/layout/_about-section.scss
@@ -1,5 +1,13 @@
 .about-section {
-    padding: 60px 0;
+    padding: 24px 0;
+
+    @media screen and (min-width:$bp-mobile) {
+        padding: 16px 0;
+    }
+
+    @media screen and (min-width:$bp-desktop) {
+        padding: 60px 0;
+    }
 
     &__title {
         text-transform: uppercase;
