--- a/src/scss/layout/_key-section.scss
+++ b/src/scss/layout/_key-section.scss
@@ -44,6 +44,7 @@
 
             @media screen and (min-width:$bp-desktop) {
                 font-size: 36px;
+                margin-top: 0;
                 line-height: 50px;
             }
         }
