--- a/src/scss/layout/_initiators-section.scss
+++ b/src/scss/layout/_initiators-section.scss
@@ -116,14 +116,16 @@
             margin:0
         }
 
-        &:hover {
-            background: var(--Blue-dark, #030E43);
-            box-shadow: 0px 4px 10px 0px rgba(3, 14, 67, 0.60);
-        }
-
-        &:active {
-            background: var(--Blue-dark, #030E43);
-            box-shadow: 0px 4px 20px 0px rgba(233, 204, 170, 0.60);
+        @media screen and (min-width:$bp-desktop) {
+            &:hover {
+                background: var(--Blue-dark, #030E43);
+                box-shadow: 0px 4px 10px 0px rgba(3, 14, 67, 0.60);
+            }
+    
+            &:active {
+                background: var(--Blue-dark, #030E43);
+                box-shadow: 0px 4px 20px 0px rgba(233, 204, 170, 0.60);
+            }
         }
     }
 
