--- a/src/scss/layout/_hero-section.scss
+++ b/src/scss/layout/_hero-section.scss
@@ -46,6 +46,10 @@
     font-size: 50px;
     margin: 370px 0 0;
   }
+
+  @media screen and (min-width: 1920px) {
+    font-size: 60px;
+  }
 }
 
 .hero-section__text {
@@ -59,5 +63,9 @@
 
   @media screen and (min-width: $bp-desktop) {
     font-size: 30px;
+  }
+
+  @media screen and (min-width: 1920px) {
+    font-size: 33px;
   }
 }
