--- a/src/scss/layout/_hero-section.scss
+++ b/src/scss/layout/_hero-section.scss
@@ -1,24 +1,22 @@
 .hero-section {
   position: relative;
   width: 100%;
-  height: 55vh; /* Жесткая высота секции */
+  height: 55vh;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
   overflow: hidden;
 
-  @media screen and (min-width: $bp-desktop) {
-    height: 100vh; /* Для десктопа 100vh */
+  @media screen and (min-width: 1200px) {
+    height: 100vh;
   }
 
-  /* Настройки фонового изображения */
-  background-size: cover; /* Изображение заполняет секцию */
-  background-position: center top; /* Центрирование изображения */
-  background-repeat: no-repeat; /* Без повторения */
+  background-size: cover;
+  background-position: center top;
+  background-repeat: no-repeat;
   transition: background-image 0.5s ease-in-out;
 
-  /* Затемнение фона */
   &::after {
     content: '';
     position: absolute;
@@ -26,11 +24,10 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(0deg, rgba(12, 17, 41, 0.6), rgba(12, 17, 41, 0.6)); /* Затемнение */
-    z-index: 1; /* Затемнение выше фона */
+    background: linear-gradient(0deg, rgba(12, 17, 41, 0.6), rgba(12, 17, 41, 0.6));
+    z-index: 1;
   }
 
-  /* Псевдоэлемент для плавного перехода */
   &::before {
     content: '';
     position: absolute;
@@ -41,20 +38,19 @@
     background-size: cover;
     background-position: center top;
     background-repeat: no-repeat;
-    z-index: 0; /* Позади текста */
+    z-index: 0;
     transition: opacity 0.5s ease-in-out;
-    opacity: 0; /* Прозрачный слой */
+    opacity: 0;
   }
 
   &.transitioning::before {
-    opacity: 1; /* Показывает старое изображение во время перехода */
-    background-image: inherit; /* Устанавливает старое изображение */
+    opacity: 1;
   }
 }
 
 .hero-section__title {
-  position: relative; /* Для корректного слоя текста */
-  z-index: 2; /* Выше затемнения */
+  position: relative;
+  z-index: 2;
   font-style: italic;
   font-family: 'Nunito Sans', sans-serif;
   font-size: 18px;
@@ -77,8 +73,8 @@
 }
 
 .hero-section__text {
-  position: relative; /* Для корректного слоя текста */
-  z-index: 2; /* Выше затемнения */
+  position: relative;
+  z-index: 2;
   font-style: italic;
   font-size: 14px;
   font-weight: 600;
