--- a/src/scss/layout/_hero-section.scss
+++ b/src/scss/layout/_hero-section.scss
@@ -68,7 +68,8 @@
   }
 
   @media screen and (min-width: 1920px) {
-    font-size: 70px;
+    font-size: 86px;
+    margin-bottom: 14px;
   }
 }
 
@@ -88,6 +89,7 @@
   }
 
   @media screen and (min-width: 1920px) {
-    font-size: 40px;
+    font-size: 48px;
+    margin-top: 0;
   }
 }
